# HelpMe

CODE/: CMakeLists.txt  MessageTransmitter.h
Jonas/: Source.cpp
falling_detection/: CMakeLists.txt~  MessageTransmitter.cpp  main.cpp
handDetect/: CMakeLists.txt  handGesture.cpp  handGesture.hpp  main.cpp  myImage.hpp  opencv
speech_recognition/: requirements.txt  send_sms.py  service_account.json  steps_to_follow.txt  transcribe_streaming.py  zmq_server.py
speech_recognition/env/: pip-selfcheck.json
speech_recognition/exit/: pip-selfcheck.json
vision/: Source.cpp  main.cpp  main_more.cpp
zmq/: play_wav_file.py  zmq_client.py  zmq_server.py
